turn off autocomplete on nickname field

--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
                     <form action="" method="post" name="send_nickname">
                         <label for="nickname">What's your nickname?</label>
                         <div class="input-group">
-                            <input type="text" class="form-control" name="nickname" placeholder="Nickname?" required>
+                            <input type="text" class="form-control" name="nickname" placeholder="Nickname?" required autocomplete="off">
                         </div>
                         <br>
                         <button class="btn btn-primary">Enter</button>
